--- a/src/app/shared/property-details/property-details.component.scss
+++ b/src/app/shared/property-details/property-details.component.scss
@@ -109,6 +109,22 @@
  
 }
 
+.submit-contact{
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 24px;
+    height: auto;
+    background-color: rgb(0, 106, 255);
+    border-color: rgb(0, 106, 255);
+    color: rgb(255, 255, 255);
+    margin-left: 3%;
+    margin-top: 3%;
+    width: 77%;
+    border: 1px solid;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
 .location{
     margin-bottom: 20px;
     ::ng-deep{
@@ -117,6 +133,10 @@
         width: 100% !important;
       }
     }
+}
+
+.err-msg{
+    color:red;
 }
 
 ::ng-deep{
@@ -135,3 +155,15 @@
     }
 }
 
+::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline-end {
+    border-radius: 0 20px 20px 0 !important;
+    flex-grow: 1 !important;
+  }
+  ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline-start {
+    border-radius: 20px 0 0 20px !important;
+    flex-grow: 1 !important;
+  }
+  ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
+    background-color: rgb(241, 241, 241);
+    border-radius: 20px 20px 20px 20px !important;
+  }
