Start validation on create properties

--- a/src/app/shared/component/sell-house/sell-house.component.html
+++ b/src/app/shared/component/sell-house/sell-house.component.html
@@ -1,4 +1,6 @@
+
 <div class="container-center">
+  
     <div class="container-center-column">
         <!--TITLE-->
         <div class="row width-80">
@@ -11,93 +13,94 @@
         </div>
         <!--LINE 1-->
         <div class="row width-80">
-            <div class="width-30 form">
-                <div>Price*</div>
-                <mat-form-field class="full-width" appearance="outline">
-                    <input type="number" matInput [(ngModel)]="sellHouseForm.Price" required>
-                </mat-form-field>
-            </div>
-            <div class="width-30 form">
-                <div>Area m2*</div>
-                <mat-form-field class="full-width" appearance="outline">
-                    <input type="number" matInput [(ngModel)]="sellHouseForm.NetAream2" required>
-                </mat-form-field>
-            </div>
-            <div class="width-30 form">
-                <div>Price/m2</div>
-                <mat-form-field class="full-width" appearance="outline">
-                    <input type="number" matInput [(ngModel)]="sellHouseForm.PriceNetAream2" disabled>
-                </mat-form-field>
-            </div>
-        </div>
-        <!--LINE 2-->
-        <div class="row width-80">
-            <div class="width-30 form">
-                <div>Gross Area m2</div>
-                <mat-form-field class="full-width" appearance="outline">
-                    <input type="number" matInput [(ngModel)]="sellHouseForm.GrossAream2">
-                </mat-form-field>
-            </div>
-            <div class="width-30 form">
-                <div>Typology*</div>
-                <mat-form-field class="width-100" appearance="outline">
-                    <mat-select [(ngModel)]="sellHouseForm.PropertyTypeId" required>
-                        <mat-option *ngFor="let type of propertyTypes" [value]="type.Id">
-                            {{type.Type}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
-            </div>
-            <div class="width-30 form">
-                <div>Floor</div>
-                <mat-form-field class="width-100" appearance="outline">
-                    <mat-select [(ngModel)]="sellHouseForm.Floor">
-                        <mat-option *ngFor="let floor of floors" [value]="floor">
-                            {{floor}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
-            </div>
-
-            <div class="width-30 form">
-                <div>Room</div>
-                <mat-form-field class="width-100" appearance="outline">
-                    <mat-select [(ngModel)]="sellHouseForm.Rooms">
-                        <mat-option *ngFor="let room of rooms" [value]="rooms">
-                            {{room}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
-            </div>
-        </div>
-        <!--LINE 3-->
-        <div class="row width-80">
-            <div class="width-30 form">
-                <div>Year of construction</div>
-                <mat-form-field class="full-width form" appearance="outline">
-                    <input type="number" matInput [(ngModel)]="sellHouseForm.YearOfConstruction">
-                </mat-form-field>
-            </div>
-            <div class="width-30 form">
-                <div>Nº Bathrooms*</div>
-                <mat-form-field class="width-100 form" appearance="outline">
-                    <mat-select [(ngModel)]="sellHouseForm.NumberOfBathrooms" required>
-                        <mat-option *ngFor="let bathroom of bathrooms" [value]="bathroom">
-                            {{bathroom}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
-            </div>
-            <div class="width-30 form">
-                <div>Energy Certificate</div>
-                <mat-form-field class="width-100 form" appearance="outline">
-                    <mat-select [(ngModel)]="sellHouseForm.EnerergyCertificate">
-                        <mat-option *ngFor="let certificate of energyCertificate" [value]="certificate">
-                            {{certificate}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
-            </div>
+            <form  class="row width-100" [formGroup] = "mainPropertyCharacteristic">
+                <div class="row width-100">
+                    <div class="width-30 form">
+                        <label for="name">Price *</label>
+                        <mat-form-field class="full-width" appearance="outline">
+                            <input formControlName="price" placeholder="Price" type="number" matInput required>
+                        </mat-form-field>
+                    </div>
+                    <div class="width-30 form">
+                        <label for="netAream2">Area m2*</label>
+                        <mat-form-field class="full-width" appearance="outline">
+                            <input type="number" matInput placeholder="Area m2*" formControlName="netAream2" required>
+                        </mat-form-field>
+                    </div>
+                    <div class="width-30 form">
+                        <label  for="priceNetAream2">Price/m2</label>
+                        <mat-form-field class="full-width" appearance="outline">
+                            <input type="number" matInput placeholder="Price/m2" formControlName = "priceNetAream2" disabled>
+                        </mat-form-field>
+                    </div>
+                </div>
+                <div class="row width-100">
+                    <div class="width-30 form">
+                        <label for="grossAream2">Gross Area m2</label>
+                        <mat-form-field class="full-width" appearance="outline">
+                            <input type="number" matInput placeholder="Gross Area m2" formControlName="grossAream2">
+                        </mat-form-field>
+                    </div>
+                    <div class="width-30 form">
+                        <label for="propertyTypeId">Typology*</label>
+                        <mat-form-field class="width-100" appearance="outline">
+                            <mat-select formControlName="propertyTypeId" required>
+                                <mat-option *ngFor="let type of propertyTypes" [value]="type.Id">
+                                    {{type.Type}}
+                                </mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                    </div>
+                    <div class="width-30 form">
+                        <label for="floor">Floor</label>
+                        <mat-form-field class="width-100" appearance="outline">
+                            <mat-select formControlName="floor">
+                                <mat-option *ngFor="let floor of floors" [value]="floor">
+                                    {{floor}}
+                                </mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                    </div>
+                    <div class="width-30 form">
+                        <label for="rooms">Room</label>
+                        <mat-form-field class="width-100" appearance="outline">
+                            <mat-select formControlName="rooms">
+                                <mat-option *ngFor="let room of rooms" [value]="rooms">
+                                    {{room}}
+                                </mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                    </div>
+                </div>
+                <div class="row width-100">
+                    <div class="width-30 form">
+                        <label for="yearOfConstruction">Year of construction</label>
+                        <mat-form-field class="full-width form" appearance="outline">
+                            <input type="number" placeholder="Year of construction" matInput formControlName="yearOfConstruction">
+                        </mat-form-field>
+                    </div>
+                    <div class="width-30 form">
+                        <label for="numberOfBathrooms">Nº Bathrooms*</label>
+                        <mat-form-field class="width-100 form" appearance="outline">
+                            <mat-select formControlName="numberOfBathrooms" required>
+                                <mat-option *ngFor="let bathroom of bathrooms" [value]="bathroom">
+                                    {{bathroom}}
+                                </mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                    </div>
+                    <div class="width-30 form">
+                        <label for="enerergyCertificate">Energy Certificate</label>
+                        <mat-form-field class="width-100 form" appearance="outline">
+                            <mat-select formControlName="enerergyCertificate">
+                                <mat-option *ngFor="let certificate of energyCertificate" [value]="certificate">
+                                    {{certificate}}
+                                </mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                    </div>
+                </div>
+            </form>
         </div>
 
         <!--LINE 4-->
@@ -203,4 +206,5 @@
             <button class="list" mat-raised-button (click)="publishListingSubmit()">Publish listing</button>
         </div>
     </div>
+
 </div>
