--- a/src/app/shared/property-details/property-details.component.html
+++ b/src/app/shared/property-details/property-details.component.html
@@ -37,17 +37,7 @@
     <div class="row">
         <div class="col-md-12 col-lg-8 property-images" *ngIf="items.length > 0">
             <div class="row container-image" *ngIf="items.length > 0">
-                <div class="col-6"  *ngFor="let item of items; let i = index">
-                    <div *ngIf="i == 0"  [ngClass]="i == 0 ? 'card-image' : 'item'">
-                        <img [src]="item.image" (click)="showLightbox(i)" width="100%" height="100%" />
-                    </div>
-                    <div *ngIf="i >= 1" [ngClass]="i == 0 ? 'card-image' : 'item'">
-                        <img [src]="item.image" (click)="showLightbox(i)" width="100%" height="100%" />
-                    </div>
-                </div>
-            </div>
-            <div class="row container-image" *ngIf="items.length > 0">
-                <div class="col-6"  *ngFor="let item of items; let i = index">
+                <div class="col-md-12 col-lg-6"  *ngFor="let item of items; let i = index">
                     <div *ngIf="i == 0"  [ngClass]="i == 0 ? 'card-image' : 'item'">
                         <img [src]="item.image" (click)="showLightbox(i)" width="100%" height="100%" />
                     </div>
