--- a/src/app/shared/property-details/property-details.component.html
+++ b/src/app/shared/property-details/property-details.component.html
@@ -2,16 +2,18 @@
     <div  class="row header">
         <div class="price-value">
             <span>{{property.Price | number: '1.0-0'}} €</span>
+            <span class="euro-to-meter">{{property.Price | number: '1.0-0'}} €/m2</span>
+            <span class="type">For Sale</span>
         </div>
         <div class="share-buttons">
             <div >
-                <img src="/assets/icons/save.svg" width="40" />
+                <img src="/assets/icons/save.svg" width="30" /> Save
             </div>
             <div >
-                <img src="/assets/icons/share.svg" width="40" />
+                <img src="/assets/icons/share.svg" width="30" /> Share
             </div>
             <button  class="close-button" (click)="close()">
-                <img src="/assets/icons/close.svg" width="40" />
+                <img src="/assets/icons/close.svg" width="30" />
             </button>
         </div>
     </div>
@@ -19,16 +21,16 @@
         <div class="header-location">  
             <div class="col head-characteristics">
                 <div class="d-flex charct" *ngIf="property.GrossAream2">
-                    <img src="/assets/icons/house.svg" width="20" /> <p> {{property.GrossAream2}}</p>
+                    <img src="/assets/icons/house.svg" width="20" /> <p> {{property.GrossAream2}} <span>m2</span>  </p>
                 </div>
                 <div class="d-flex charct" *ngIf="property.NumberOfBathrooms">
-                    <img src="/assets/icons/bathroom.svg" width="20" /> <p> {{property.NumberOfBathrooms}}</p>
+                    <img src="/assets/icons/bathroom.svg" width="20" /> <p> {{property.NumberOfBathrooms}} <span>ba</span></p>
                 </div>
                 <div class="d-flex charct" *ngIf="property.NumberOfBathrooms">
-                    <img src="/assets/icons/room.svg" width="20" /> <p> {{property.NumberOfBathrooms}}</p>
+                    <img src="/assets/icons/room.svg" width="20" /> <p> {{property.NumberOfBathrooms}} <span>bd</span></p>
                 </div>
                 <div class="d-flex charct" *ngIf="property.Floor">
-                    <img src="/assets/icons/floor.svg" width="20" /> <p> {{property.Floor}}</p>
+                    <img src="/assets/icons/floor.svg" width="20" /> <p> {{property.Floor}} <span>fl</span></p>
                 </div>                   
             </div>
         </div>
@@ -54,11 +56,14 @@
             <div class="row property-content">
                 <div class="col-12">
                     <div class="tab location">
-                        <h4>Location</h4>
-                        <div class="row header">
+                        <div class="row flex">
                             <div class="location-icon">
                                 <img src="/assets/icons/location.svg" width="60" />
                             </div>
+                            <h4>Location</h4>
+                        </div>
+                        <mat-divider></mat-divider>
+                        <div class="row header">
                             <div class="header-location">  
                                 <h3>{{property.City}} - {{property.Country}}</h3>
                                 <span>{{property.Address}}</span>
@@ -68,6 +73,7 @@
                     </div>
                     <div class="tab"> 
                         <h4>More About the House</h4>
+                        <mat-divider></mat-divider>
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
 
                         Why do we use it?
@@ -81,18 +87,20 @@
                     </div>
                     <div class="tab"  *ngIf="characteristics.length > 0"> 
                         <h4>Aditional Features</h4>
+                        <mat-divider></mat-divider>
                         <div class="row characteristics">
                             <div  *ngFor="let item of characteristics; let i = index">
-                                <span class="col-12 badge badge-pill badge-light">
+                                <div class="col-12 badge badge-pill badge-light">
                                     <img src="/assets/icons/{{item.IconName}}.svg" width="16" />
                                     {{item.Name}}
-                                </span> 
+                                </div> 
                             </div>
                         </div>
                     </div>
                   
                     <div class="tab"> 
                         <h4 id="targetBlue">Contacts</h4>
+                        <mat-divider></mat-divider>
                         <form [formGroup] = "contactForm">
                             <div class="row contact">
                                 <div class="col-10">
@@ -125,7 +133,7 @@
                                     Message is required
                                 </div>
                             </div>
-                            <button class="submit-contact" (click)="onSubmit()">Contact an Agent</button>
+                            <button mat-raised-button class="submit-contact" (click)="onSubmit()">Contact an Agent</button>
                             </div>
                            
                         </form>
