--- a/src/app/modules/private/user-board/user-board.component.html
+++ b/src/app/modules/private/user-board/user-board.component.html
@@ -7,7 +7,7 @@
   <!--USER LIST-->
   <div class="left-container width-15" *ngIf="user.Type === 1">
     <div class="button-wrapper">
-      <button mat-raised-button color="primary" class="button-main-menu width-100">Messages</button>
+      <button mat-raised-button color="primary" class="button-main-menu width-100" [routerLink]="['/messages']">Messages</button>
     </div>
     <div class="button-wrapper">
       <button mat-raised-button color="primary" class="button-main-menu width-100" [routerLink]="['/my-listings']">My
